--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,13 +32,18 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
-    compile 'com.google.firebase:firebase-core:12.0.1'
-    compile 'com.google.firebase:firebase-database:12.0.1'
-    compile 'com.google.firebase:firebase-storage:12.0.1'
-    compile 'com.google.firebase:firebase-crash:12.0.1'
-    compile 'com.google.firebase:firebase-auth:12.0.1'
-    compile 'com.google.android.gms:play-services-auth:12.0.1'
+    implementation 'com.firebase:geofire-android:2.3.1'
+
+    implementation 'com.google.android.gms:play-services:12.0.1'
+    implementation 'com.google.firebase:firebase-core:12.0.1'
+    implementation 'com.google.firebase:firebase-database:12.0.1'
+    implementation 'com.google.firebase:firebase-storage:12.0.1'
+    implementation 'com.google.firebase:firebase-crash:12.0.1'
+    implementation 'com.google.firebase:firebase-auth:12.0.1'
+    implementation 'com.google.android.gms:play-services-auth:12.0.1'
     implementation 'com.google.android.gms:play-services-maps:12.0.1'
+    implementation 'com.google.android.gms:play-services-location:12.0.1'
+    implementation 'com.google.android.gms:play-services-places:12.0.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
