--- a/gradle.properties
+++ b/gradle.properties
@@ -12,10 +12,10 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-#Mon Apr 02 22:58:56 IST 2018
+#Tue Apr 24 17:41:40 IST 2018
 systemProp.http.proxyPort=8080
-systemProp.http.proxyUser=bim2015007
-systemProp.http.proxyPassword=Ammy_007
+systemProp.http.proxyUser=icm2015005
+systemProp.http.proxyPassword=9560493515
 org.gradle.jvmargs=-Xmx1536m
 systemProp.https.proxyPassword=Ammy_007
 systemProp.https.proxyHost=172.31.1.3
